<resources>
    <string name="app_name">Zer0 Player</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="stop_button">Stop</string>
    <string name="play_button">Play</string>
    <string name="pause_button">Pause</string>
    <string name="skip_button">Skip</string>
    <string name="video_category">Videos</string>
    <string name="song_category">Songs</string>
    <string name="playlist_button">Playlists</string>
    <string name="music_button">Music</string>
    <string name="safe_dialog"></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
