<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MediaActivity">



    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="70dp"
        android:id="@android:id/list" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout"
        android:background="@drawable/bg">

        <Button

            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/skip_button"
            android:id="@+id/skipButton"
            android:background="@drawable/skip_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:height="40dp"
            android:width="40dp"
            android:text="@string/play_button"
            android:clickable="true"
            android:visibility="visible"
            android:id="@+id/startButton"
            android:background="@drawable/play_button"
            android:layout_alignTop="@+id/playPauseButton"
            android:layout_alignLeft="@+id/playPauseButton"
            android:layout_alignStart="@+id/playPauseButton" />
        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:height="40dp"
            android:width="40dp"
            android:text="@string/pause_button"
            android:clickable="false"
            android:visibility="invisible"
            android:id="@+id/playPauseButton"
            android:layout_alignTop="@+id/skipButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/play_button" />

        <Button
            style="?android:attr/buttonStyleSmall"

            android:text="@string/video_category"
            android:id="@+id/videoCategoryButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="25dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/song_category"
            android:id="@+id/songCategoryButton"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="25dp"/>

    </RelativeLayout>


</RelativeLayout>



