<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <Button
        android:layout_width="90dp"
        android:layout_height="77dp"
        android:text="@string/music_button"
        android:id="@+id/songsButton"
        android:background="@null"
        android:width="120dp"
        android:textSize="45dp"
        android:gravity="left"
        android:layout_marginTop="141dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/playlistButton"
        android:layout_alignEnd="@+id/playlistButton" />

    <Button
        android:layout_width="84dp"
        android:layout_height="77dp"
        android:text="@string/video_category"
        android:id="@+id/videosButton"
        android:background="@null"
        android:width="120dp"
        android:textSize="45dp"
        android:gravity="left"
        android:layout_below="@+id/songsButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/songsButton"
        android:layout_alignEnd="@+id/songsButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlist_button"
        android:id="@+id/playlistButton"
        android:background="@null"
        android:width="350dp"
        android:gravity="left"
        android:textSize="45dp"
        android:layout_below="@+id/videosButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:background="@drawable/logo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>